Implement Spring Cloud microservice migration without workflow changes